Fix target lists tab overflow showing on page sides

--- a/app/shared/components/target-list-expanded/expanded.scss
+++ b/app/shared/components/target-list-expanded/expanded.scss
@@ -1,4 +1,6 @@
 .expanded-target-lists {
+  overflow: hidden;
+
   label {
     outline: none;
   }
